--- a/frontend/src/app/shared/dialog-scheduling/dialog-scheduling.component.scss
+++ b/frontend/src/app/shared/dialog-scheduling/dialog-scheduling.component.scss
@@ -235,9 +235,9 @@
 
   .content.faculty-list {
     @include mixins.hide-scrollbar;
-    margin-bottom: var(--spacing-lg);
+    margin-bottom: var(--spacing-xl);
     border-radius: var(--border-radius-sm);
-    overflow: visible;
+    overflow: scroll;
 
     .no-faculty-message {
       opacity: var(--opacity-semi-opaque);
@@ -248,42 +248,42 @@
       @include mixins.flex-layout(
         $direction: column,
         $align: stretch,
-        $gap: var(--spacing-xxxs)
-      );
-      margin-bottom: var(--spacing-sm);
-    }
-
-    .faculty-pref-nav {
-      @include mixins.flex-layout(
-        $align: center,
-        $justify: space-between,
         $gap: var(--spacing-xxs)
       );
+      margin-bottom: var(--spacing-sm);
 
-      .nav-button-container {
-        @include mixins.flex-layout;
-      }
+      .faculty-pref-nav {
+        @include mixins.flex-layout(
+          $align: center,
+          $justify: space-between,
+          $gap: var(--spacing-xxs)
+        );
 
-      .pref-nav-button {
-        @include mixins.flex-layout($align: center);
-        border: none;
-        outline: none;
-        background-color: transparent;
-        cursor: pointer;
-        padding: 0px;
-        border-radius: 50%;
-
-        mat-icon {
-          color: var(--neutral-base);
+        .nav-button-container {
+          @include mixins.flex-layout;
         }
 
-        &:hover:not(:disabled) {
-          background-color: var(--neutral-fade);
-        }
+        .pref-nav-button {
+          @include mixins.flex-layout($align: center);
+          border: none;
+          outline: none;
+          background-color: transparent;
+          cursor: pointer;
+          padding: 0px;
+          border-radius: 50%;
 
-        &:disabled {
-          opacity: var(--opacity-semi-transparent);
-          cursor: not-allowed;
+          mat-icon {
+            color: var(--neutral-base);
+          }
+
+          &:hover:not(:disabled) {
+            background-color: var(--neutral-fade);
+          }
+
+          &:disabled {
+            opacity: var(--opacity-semi-transparent);
+            cursor: not-allowed;
+          }
         }
       }
     }
@@ -293,10 +293,12 @@
       padding: var(--spacing-xs) var(--spacing-sm);
       border-radius: var(--border-radius-sm);
       cursor: pointer;
-      transition: transform 0.3s cubic-bezier(0.34, 1.56, 0.64, 1);
+      transition: transform 0.3s cubic-bezier(0.34, 1.56, 0.64, 1),
+        opacity 0.3s ease;
+      box-shadow: var(--shadow-level-1);
 
       &:hover {
-        transform: translateX(3px);
+        opacity: var(--opacity-semi-opaque);
       }
 
       &:active {
@@ -305,9 +307,9 @@
 
       .faculty-type {
         width: fit-content;
-        padding: 0 var(--spacing-xxs);
+        padding: 1px var(--spacing-xs);
         margin: var(--spacing-xxs) 0;
-        border-radius: var(--border-radius-xs);
+        border-radius: var(--border-radius-md);
         font-size: var(--font-size-xsx);
         font-weight: 500;
 
