--- a/frontend/src/app/core/components/admin/academic-year/academic-year.component.html
+++ b/frontend/src/app/core/components/admin/academic-year/academic-year.component.html
@@ -53,16 +53,16 @@
 
         <ng-container matColumnDef="year_levels">
           <th mat-header-cell *matHeaderCellDef class="custom-header">
-            Year Levels
+            Curriculum
           </th>
           <td mat-cell *matCellDef="let element" class="custom-cell">
             <button
               mat-button
               class="edit-button sec-ripple"
-              (click)="onManageYearLevels(element)"
+              (click)="onManageCurriculum(element)"
             >
               <mat-icon>school</mat-icon>
-              <span>Edit Year Levels</span>
+              <span>Edit Curriculum</span>
             </button>
           </td>
         </ng-container>
