--- a/frontend/src/app/core/components/admin/manage-preferences/manage-preferences.component.html
+++ b/frontend/src/app/core/components/admin/manage-preferences/manage-preferences.component.html
@@ -185,18 +185,12 @@
           <th mat-header-cell *matHeaderCellDef class="custom-header">
             <div class="helper-container">
               <mat-slide-toggle
-                class="header-toggle"
-                [checked]="isToggleAllChecked"
-                [disabled]="
-                  (hasIndividualDeadlines &&
-                    !isToggleAllChecked &&
-                    isEnabled) ||
-                  isIndividualStartDateSet
-                "
-                [matTooltip]="getAllToggleTooltip(isToggleAllChecked)"
-                (change)="onToggleAllPreferences($event)"
-              >
-              </mat-slide-toggle>
+              class="header-toggle"
+              [checked]="isToggleAllChecked"
+              [disabled]="getToggleState(allData[0]).isGlobalDisabled"
+              [matTooltip]="getTooltip('global')"
+              (change)="onToggleAllPreferences($event)">
+            </mat-slide-toggle>
 
               <span
                 mat-symbol="help"
@@ -214,13 +208,12 @@
           <td mat-cell *matCellDef="let element" class="custom-cell">
             <div class="helper-container">
               <mat-slide-toggle
-                class="single-toggle"
-                [checked]="element.is_enabled"
-                [disabled]="isToggleAllChecked || isGlobalStartDateSet"
-                [matTooltip]="getSingleToggleTooltip(element)"
-                (change)="onToggleSinglePreferences(element, $event)"
-              >
-              </mat-slide-toggle>
+              class="single-toggle"
+              [checked]="element.is_enabled"
+              [disabled]="getToggleState(element).isIndividualDisabled"
+              [matTooltip]="getTooltip('individual', element)"
+              (change)="onToggleSinglePreferences(element, $event)">
+            </mat-slide-toggle>
             </div>
           </td>
         </ng-container>
